qmlformat: Fix SemicolonRule option ignored in config file

The SemicolonRule setting from .qmlformat.ini was not being applied,
only the command line option took effect.

Pick-to: 6.10
Fixes: QTBUG-141638
Change-Id: I471fde37c3650e872a893ce46bb5f55e9cc3158e
Initial-Patch-By: Dmitry Makarenko <kryksyh@gmail.com>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>